<?xml version="1.0"?>
<package>
    <name>libsweep</name>
    <version>1.3.0</version>
    <description>catkin-ized version of libsweep library from sweep-sdk</description>
    <license>MIT</license>
    <maintainer email="jhecker@gmail.com">Joshua P. Hecker</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
</package>
