<?xml version="1.0"?>
<package>
  <name>move_base_config</name>
  <version>1.0.0</version>
  <description>This package stores and maintains configuration files for the move_base package</description>

  <maintainer email="jhecker@gmail.com">Joshua Hecker</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
